# DisplayManager

./: .gitignore  Cargo.toml  README.md
crates/display-api/: Cargo.toml
crates/display-api/src/: client.rs  lib.rs  protocol.rs
crates/display-core/: Cargo.toml
crates/display-core/src/: identity.rs  lib.rs  profile.rs  rules.rs
crates/display-daemon/: Cargo.toml
crates/display-daemon/src/: automation.rs  engine.rs  lib.rs  main.rs  rpc.rs  worker.rs
crates/display-ddc/: Cargo.toml
crates/display-ddc/src/: caps.rs  lib.rs  protocol.rs  vcp.rs
crates/display-gui/: Cargo.toml
crates/display-gui/src/: client.rs  config.rs  login.rs  main.rs  mediakeys.rs  settings.rs  statusbar.rs
crates/display-macos/: Cargo.toml
crates/display-macos/src/: ioreg.rs  lib.rs  matching.rs  sys.rs  transport.rs
crates/display-probe/: Cargo.toml
crates/display-probe/src/: main.rs
crates/displayctl/: Cargo.toml
crates/displayctl/src/: backend.rs  main.rs
packaging/: DisplayStudio.entitlements  Info.plist.template  build-app.sh  build-pkg.sh  launchagent.plist.template
