[package]
name = "display-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
display-core.workspace = true
display-ddc.workspace = true
core-foundation.workspace = true
core-foundation-sys.workspace = true
libc.workspace = true
thiserror.workspace = true
