[package]
name = "display-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "display-probe"
path = "src/main.rs"

[dependencies]
display-core.workspace = true
display-ddc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
display-macos.workspace = true
